--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <% include audit_header.ejs %>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    Index Page.
+    <% include audit_footer.ejs %>
   </body>
 </html>
