--- a/views/audit_login.ejs
+++ b/views/audit_login.ejs
@@ -20,12 +20,11 @@
                 <input type="password" class="form-control" placeholder="密码" required="" />
               </div>
               <div>
-                <a class="btn btn-default submit" href="index.html">Log in</a>
-                <a class="reset_pass" href="#">Lost your password?</a>
+                <a class="btn btn-default submit" href="index.html">登录</a>
               </div>
               <div class="clearfix"></div>
               <div class="separator">
-                <h1><i class="fa fa-paw" style="font-size: 26px;"></i> PayKitty</h1>
+                <h1><i class="fa fa-leaf" style="font-size: 26px;"></i> PayKitty</h1>
               </div>
             </form>
           </section>
