--- a/views/audit_footer.ejs
+++ b/views/audit_footer.ejs
@@ -1,3 +1,6 @@
-<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="js/stickUp.min.js"></script>
+<footer>
+  <div class="pull-right">
+    PayKitty v0.0.1 by <a href="https://github.com/DearRabbit/PayKittyTemplate">A4</a>
+  </div>
+  <div class="clearfix"></div>
+</footer>
