--- a/views/audit_login.ejs
+++ b/views/audit_login.ejs
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
   <head>
     <% include audit_header.ejs %>
   </head>
-  <body style="background:#F7F7F7;">
+  <body style="background:#FFFAF0;">
     <div class="">
-      <a class="hiddenanchor" id="toregister"></a>
-      <a class="hiddenanchor" id="tologin"></a>
-
       <div id="wrapper">
         <div id="login" class=" form">
           <section class="login_content">
-            <form>
+            <form action="" method="post" onsubmit="return checkNull();">
               <h1>审计系统登录</h1>
+              <% if (login_fail) { %>
+              <div class="alert">
+                <a class="close" data-dismiss="alert">×</a>
+                <strong>登录错误!</strong> 用户名或密码错误
+              </div>
+              <% } %>
               <div>
-                <input type="text" class="form-control" placeholder="用户名" required="" />
+                <input name="username" type="text" class="form-control" placeholder="用户名" required/>
               </div>
               <div>
-                <input type="password" class="form-control" placeholder="密码" required="" />
+                <input name="password" type="password" class="form-control" placeholder="密码" required/>
               </div>
-              <div>
-                <a class="btn btn-default submit" href="index.html">登录</a>
-              </div>
-              <div class="clearfix"></div>
+              <button type="submit" class="btn btn-default submit">登录</button>
               <div class="separator">
                 <h1><i class="fa fa-leaf" style="font-size: 26px;"></i> PayKitty</h1>
               </div>
@@ -31,6 +31,7 @@
         </div>
       </div>
     </div>
-    <% include audit_footer.ejs %>
+    <% include audit_footjs.ejs %>
+    <script>function checkNull(){if($(":text")[0].value==""){alert("用户名不能为空");return false}else{if($(":password")[0].value==""){alert("密码不能为空");return false}}};</script>
   </body>
 </html>
