sample with proper data but still no db

--- a/views/audit_common.ejs
+++ b/views/audit_common.ejs
@@ -63,16 +63,16 @@
             <span class=" fa fa-angle-down"></span>
           </a>
           <ul class="dropdown-menu dropdown-usermenu pull-right">
-            <li><a href="javascript:;">帐户信息</a>
+            <li><a href="profile">帐户信息</a>
             </li>
             <li>
-              <a href="javascript:;">
+              <a href="settings">
                 <span class="badge bg-red pull-right">50%</span>
                 <span>设置</span>
               </a>
             </li>
             <li>
-              <a href="javascript:;"><i class="fa fa-question-circle pull-right"></i>帮助</a>
+              <a href="javascript:;" onclick="audit_help();"><i class="fa fa-question-circle pull-right"></i>帮助</a>
             </li>
             <li><a href="logout"><i class="fa fa-sign-out pull-right"></i>登出</a>
             </li>
