move datatable.js to each page

--- a/views/audit_home.ejs
+++ b/views/audit_home.ejs
@@ -74,7 +74,9 @@
         <% include audit_footer.ejs%>
       </div>
     </div>
-  <% include audit_footjs.ejs %>
+    <% include audit_footjs.ejs %>
+    <script src="https://cdn.datatables.net/1.10.11/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js"></script>
     <!-- Datatables -->
     <script>
       $('#datatable').dataTable({
