--- a/views/audit_archive.ejs
+++ b/views/audit_archive.ejs
@@ -15,7 +15,7 @@
             <div class="page-title">
               <div class="title_left">
                 <h3>
-                  审核账单
+                  历史账单
                 </h3>
               </div>
               <div class="title_right">
@@ -28,7 +28,7 @@
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2><%= date %></h2>
+                    <h2>2016年</h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -47,7 +47,7 @@
           </div>
         </div>
 
-        <% include audit_footer.ejs %>
+        <% include audit_footer.ejs%>
       </div>
     </div>
     <% include audit_footjs.ejs %>
