--- a/views/audit_log.ejs
+++ b/views/audit_log.ejs
@@ -15,7 +15,7 @@
             <div class="page-title">
               <div class="title_left">
                 <h3>
-                  审核账单
+                  修改日志
                 </h3>
               </div>
               <div class="title_right">
@@ -28,7 +28,7 @@
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2><%= date %></h2>
+                    <h2></h2>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -38,7 +38,25 @@
                     <div class="clearfix"></div>
                   </div>
                   <div class="x_content">
-                    <% include audit_tables.ejs %>
+                    <table id="datatable" class="table table-striped table-bordered">
+                      <thead>
+                      <tr>
+                        <th>订单号</th>
+                        <th>修改日期</th>
+                        <th>修改记录</th>
+                      </tr>
+                      </thead>
+
+                      <tbody>
+                      <% for (var i in data) { %>
+                      <tr>
+                        <td><%= data[i].id %></td>
+                        <td><%= data[i].modifyTime %></td>
+                        <td><%= data[i].msg %></td>
+                      </tr>
+                      <% } %>
+                      </tbody>
+                    </table>
                   </div>
                 </div>
               </div>
@@ -47,7 +65,7 @@
           </div>
         </div>
 
-        <% include audit_footer.ejs %>
+        <% include audit_footer.ejs%>
       </div>
     </div>
     <% include audit_footjs.ejs %>
