--- a/views/audit_archive.ejs
+++ b/views/audit_archive.ejs
@@ -28,7 +28,12 @@
               <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                   <div class="x_title">
-                    <h2>2016年</h2>
+                    <div class="col-md-4">
+                      <div id="reportrange_right" class="pull-left" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc">
+                        <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>
+                        <span>April 26, 2016 - May 25, 2016</span> <b class="caret"></b>
+                      </div>
+                    </div>
                     <ul class="nav navbar-right panel_toolbox">
                       <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                       </li>
@@ -55,12 +60,17 @@
     <script src="https://cdn.datatables.net/1.10.11/js/dataTables.bootstrap.min.js"></script>
     <!-- Datatables -->
     <script>
-      $('#datatable').dataTable({
-        language: {
-          url: '//cdn.datatables.net/plug-ins/1.10.11/i18n/Chinese.json'
-        }
+      $(document).ready(function() {
+        $("#datepicker").datepicker();
+        $('#datatable').dataTable({
+          language: {
+            url: '//cdn.datatables.net/plug-ins/1.10.11/i18n/Chinese.json'
+          }
+        });
       });
     </script>
     <!-- /Datatables -->
+
+
   </body>
 </html>
