--- a/views/audit_common.ejs
+++ b/views/audit_common.ejs
@@ -1,4 +1,4 @@
-<div class="col-md-3 left_col">
+<div class="col-md-3 left_col menu_fixed">
   <div class="left_col scroll-view">
     <div class="navbar nav_title" style="border: 0;">
       <a href="home" class="site_title"><i class="fa fa-leaf"></i> <span> PayKitty</span></a>
@@ -59,7 +59,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="">
           <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            <img src="img/profile.jpeg" alt="">陶
+            <img src="./img/profile.jpeg" alt="">陶
             <span class=" fa fa-angle-down"></span>
           </a>
           <ul class="dropdown-menu dropdown-usermenu pull-right">
