--- a/views/audit_footjs.ejs
+++ b/views/audit_footjs.ejs
@@ -1,4 +1,5 @@
 <script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+<script src="http://apps.bdimg.com/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
 <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 <!-- Custom Theme Scripts -->
