--- a/views/audit_common.ejs
+++ b/views/audit_common.ejs
@@ -11,7 +11,7 @@
       </div>
       <div class="profile_info">
         <span>欢迎欢迎,</span>
-        <h2>陶</h2>
+        <h2><%= username %></h2>
       </div>
     </div>
     <!-- /menu profile quick info -->
