--- a/views/audit_profile.ejs
+++ b/views/audit_profile.ejs
@@ -40,12 +40,17 @@
                 </div>
                 <div class="x_content">
                   <div class="col-md-12 col-sm-12 col-xs-12">
-                    <h1>h1. Bootstrap heading</h1>
-                    <h2>h2. Bootstrap heading</h2>
-                    <h3>h3. Bootstrap heading</h3>
-                    <h4>h4. Bootstrap heading</h4>
-                    <h5>h5. Bootstrap heading</h5>
-                    <h6>h6. Bootstrap heading</h6>
+                    <form class="form-horizontal form-label-left" method="post">
+
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">用户名</label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" class="form-control" placeholder="<%= profile.AccountName%>" disabled="disabled">
+                        </div>
+                      </div>
+
+                    </form>
+
                   </div>
                 </div>
               </div>
