--- a/views/audit_profile.ejs
+++ b/views/audit_profile.ejs
@@ -41,11 +41,34 @@
                 <div class="x_content">
                   <div class="col-md-12 col-sm-12 col-xs-12">
                     <form class="form-horizontal form-label-left" method="post">
-
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">用户名</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
                           <input type="text" class="form-control" placeholder="<%= profile.AccountName%>" disabled="disabled">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">用户实名</label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" class="form-control" placeholder="<%= profile.ManagerName%>" disabled="disabled">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">注册时间</label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" class="form-control" placeholder="<%= profile.RegisterDate%>" disabled="disabled">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">邮箱</label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" class="form-control" placeholder="<%= profile.Email%>" disabled="disabled">
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">联系电话</label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                          <input type="text" class="form-control" placeholder="<%= profile.Phone%>" disabled="disabled">
                         </div>
                       </div>
 
