--- a/views/audit_log.ejs
+++ b/views/audit_log.ejs
@@ -52,7 +52,7 @@
                       <tr>
                         <td><%= data[i].id %></td>
                         <td><%= data[i].modifyTime %></td>
-                        <td><%= data[i].msg %></td>
+                        <td><%= data[i].message %></td>
                       </tr>
                       <% } %>
                       </tbody>
