--- a/views/audit_info.ejs
+++ b/views/audit_info.ejs
@@ -42,7 +42,7 @@
                 <!--Content-->
                 <div>
                   <br />
-                  <form class="form-horizontal form-label-left" method="post">
+                  <form action="" class="form-horizontal form-label-left" method="post">
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">ID</label>
@@ -65,7 +65,7 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">交易审核提示</label>
                       <div class="col-md-6 col-sm-6 col-xs-12">
-                        <input name="a2s" type="text" class="form-control" placeholder="<%= info.audit%>" disabled="disabled">
+                        <input type="text" class="form-control" placeholder="<%= info.auditInfo%>" disabled="disabled">
                       </div>
                     </div>
                     <div class="form-group">
@@ -90,7 +90,6 @@
                     <div class="ln_solid"></div>
                     <div class="form-group">
                       <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
-                        <button type="submit" class="btn btn-primary">返回</button>
                         <button type="submit" class="btn btn-success">修改</button>
                       </div>
                     </div>
