--- a/views/audit_settings.ejs
+++ b/views/audit_settings.ejs
@@ -42,30 +42,29 @@
                 <!--Content-->
                 <div>
                   <br />
-                  <form class="form-horizontal form-label-left">
+                  <form action="" class="form-horizontal form-label-left" method="post">
 
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">金额下限</label>
                       <div class="col-md-6 col-sm-6 col-xs-12">
-                        <input type="text" class="form-control" placeholder="<%= minValue%>" <%if (minValue<0){%>disabled="disabled"<%}%>>
+                        <input name="min" type="text" class="form-control" placeholder="<%= minValue%>" <%if (minValue<0){%>disabled="disabled"<%}%>>
                       </div>
                     </div>
 
-                    <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-3 col-xs-12">金额过大检查</label>
-                      <div class="col-md-6 col-sm-6 col-xs-12">
-                        <div class="">
-                          <label>
-                            <input name="" type="checkbox" class="js-switch" <%if (minValue>=0){%>checked<%}%> />
-                          </label>
-                        </div>
-                      </div>
-                    </div>
+                    <!--<div class="form-group">-->
+                      <!--<label class="control-label col-md-3 col-sm-3 col-xs-12">金额过大检查</label>-->
+                      <!--<div class="col-md-6 col-sm-6 col-xs-12">-->
+                        <!--<div class="">-->
+                          <!--<label>-->
+                            <!--<input name="" type="checkbox" class="js-switch" <if (minValue>=0){>checked<}> />-->
+                          <!--</label>-->
+                        <!--</div>-->
+                      <!--</div>-->
+                    <!--</div>-->
 
                     <div class="ln_solid"></div>
                     <div class="form-group">
                       <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
-                        <button type="submit" class="btn btn-primary">取消</button>
                         <button type="submit" class="btn btn-success">提交</button>
                       </div>
                     </div>
