fix time display

--- a/views/audit_log.ejs
+++ b/views/audit_log.ejs
@@ -50,8 +50,8 @@
                       <tbody>
                       <% for (var i in data) { %>
                       <tr>
-                        <td><%= data[i].id %></td>
-                        <td><%= data[i].modifyTime %></td>
+                        <td><a href="getInfo?id=<%= data[i].id %>"><%= data[i].id %></a></td>
+                        <td><%= data[i].modifyTime.format("yyyy-MM-dd hh:mm:ss") %></td>
                         <td><%= data[i].message %></td>
                       </tr>
                       <% } %>
