--- a/views/audit_profile.ejs
+++ b/views/audit_profile.ejs
@@ -56,7 +56,7 @@
                       <div class="form-group">
                         <label class="control-label col-md-3 col-sm-3 col-xs-12">注册时间</label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                          <input type="text" class="form-control" placeholder="<%= profile.RegisterDate%>" disabled="disabled">
+                          <input type="text" class="form-control" placeholder="<%= profile.RegisterDate.format("yyyy-MM-dd hh:mm:ss")%>" disabled="disabled">
                         </div>
                       </div>
                       <div class="form-group">
