--- a/views/audit_info.ejs
+++ b/views/audit_info.ejs
@@ -65,7 +65,7 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-3 col-xs-12">交易审核提示</label>
                       <div class="col-md-6 col-sm-6 col-xs-12">
-                        <input type="text" class="form-control" placeholder="<%= info.auditInfo%>" disabled="disabled">
+                        <input type="text" class="form-control" placeholder="<%= info.audit + ': ' + info.warning%>" disabled="disabled">
                       </div>
                     </div>
                     <div class="form-group">
