--- a/views/audit_common.ejs
+++ b/views/audit_common.ejs
@@ -23,7 +23,7 @@
         <ul class="nav side-menu">
           <li><a><i class="fa fa-table"></i> 审计账单 <span class="fa fa-chevron-down"></span></a>
             <ul class="nav child_menu">
-              <li><a href="home">今日账单</a>
+              <li><a href="home">昨日账单</a>
               </li>
               <li><a href="archive">历史账单</a>
               </li>
