fix error of non-close

--- a/views/audit_log.ejs
+++ b/views/audit_log.ejs
@@ -50,7 +50,7 @@
                       <tbody>
                       <% for (var i in data) { %>
                       <tr>
-                        <td><%= data[i].id %></a></td>
+                        <td><%= data[i].id %></td>
                         <td><%= data[i].modifyTime.format("yyyy-MM-dd hh:mm:ss") %></td>
                         <td><%= data[i].message %></td>
                       </tr>
