--- a/views/audit_login.ejs
+++ b/views/audit_login.ejs
@@ -3,7 +3,7 @@
   <head>
     <% include audit_header.ejs %>
   </head>
-  <body style="background:#FFFAF0;">
+  <body style="background:#f7f7f7;">
     <div class="">
       <div id="wrapper">
         <div id="login" class=" form">
