--- a/views/audit_footjs.ejs
+++ b/views/audit_footjs.ejs
@@ -4,4 +4,4 @@
 
 <!-- Custom Theme Scripts -->
 <script src="js/custom.js"></script>
-<script>function audit_help() {alert('help');}</script>
+<script>function audit_help() {alert('No help currently.');}</script>
