--- a/views/audit_settings.ejs
+++ b/views/audit_settings.ejs
@@ -30,7 +30,7 @@
 
                 <!--SubTitle-->
                 <div class="x_title">
-                  <h2></h2>
+                  <h2>系统警告设置</h2>
                   <ul class="nav navbar-right panel_toolbox">
                     <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                     </li>
