--- a/views/audit_settings.ejs
+++ b/views/audit_settings.ejs
@@ -61,7 +61,7 @@
                     <div class="ln_solid"></div>
                     <div class="form-group">
                       <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
-                        <button type="submit" class="btn btn-success">提交</button>
+                        <button type="submit" class="btn btn-success" onclick="alert('设置成功')">提交</button>
                       </div>
                     </div>
 
