--- a/views/audit_info.ejs
+++ b/views/audit_info.ejs
@@ -90,7 +90,7 @@
                     <div class="ln_solid"></div>
                     <div class="form-group">
                       <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
-                        <button type="submit" class="btn btn-success">修改</button>
+                        <button type="submit" class="btn btn-success" onclick="post_amount();">修改</button>
                       </div>
                     </div>
 
