--- a/views/audit_footjs.ejs
+++ b/views/audit_footjs.ejs
@@ -19,11 +19,11 @@
             alert("修改成功");
         }
 
-        if (sb2a.attr('placeholder') != sb2a.val()) {
+        else if (sb2a.attr('placeholder') != sb2a.val()) {
             alert("修改成功");
         }
 
-        if (sa2s.attr('placeholder') != sa2s.val()) {
+        else if (sa2s.attr('placeholder') != sa2s.val()) {
             alert("修改成功");
         }
     }</script>
