--- a/views/audit_footjs.ejs
+++ b/views/audit_footjs.ejs
@@ -18,7 +18,7 @@
             $.ajax({
                 type: 'POST',
                 url: "http://121.42.175.1/a2/api/updateorderamount",
-                data: JSON.stringify({orderID: 4, amount: 25}),
+                data: JSON.stringify({orderID: orderid, amount: current_amount}),
                 contentType: "application/json; charset=utf-8",
             });
             alert("修改成功");
